[gd_scene load_steps=146 format=2]

[ext_resource path="res://gelatto.gd" type="Script" id=1]
[ext_resource path="res://assets/gelatto/idle/idle_5.png" type="Texture" id=2]
[ext_resource path="res://assets/gelatto/idle/idle_1.png" type="Texture" id=3]
[ext_resource path="res://assets/gelatto/idle/idle_6.png" type="Texture" id=4]
[ext_resource path="res://assets/gelatto/idle/idle_3.png" type="Texture" id=5]
[ext_resource path="res://assets/gelatto/idle/idle_2.png" type="Texture" id=6]
[ext_resource path="res://assets/gelatto/idle/idle_4.png" type="Texture" id=7]
[ext_resource path="res://assets/gelatto/attack/1_atk_5.png" type="Texture" id=8]
[ext_resource path="res://assets/gelatto/attack/1_atk_8.png" type="Texture" id=9]
[ext_resource path="res://assets/gelatto/attack/1_atk_10.png" type="Texture" id=10]
[ext_resource path="res://assets/gelatto/attack/1_atk_6.png" type="Texture" id=11]
[ext_resource path="res://assets/gelatto/attack/1_atk_11.png" type="Texture" id=12]
[ext_resource path="res://assets/gelatto/attack/1_atk_12.png" type="Texture" id=13]
[ext_resource path="res://assets/gelatto/attack/1_atk_7.png" type="Texture" id=14]
[ext_resource path="res://assets/gelatto/attack/1_atk_14.png" type="Texture" id=15]
[ext_resource path="res://assets/gelatto/attack/1_atk_9.png" type="Texture" id=16]
[ext_resource path="res://assets/gelatto/attack/1_atk_13.png" type="Texture" id=17]
[ext_resource path="res://assets/gelatto/attack/1_atk_1.png" type="Texture" id=18]
[ext_resource path="res://assets/gelatto/attack/1_atk_2.png" type="Texture" id=19]
[ext_resource path="res://assets/gelatto/attack/1_atk_3.png" type="Texture" id=20]
[ext_resource path="res://assets/gelatto/attack/1_atk_4.png" type="Texture" id=21]
[ext_resource path="res://assets/gelatto/run/walk_8.png" type="Texture" id=22]
[ext_resource path="res://assets/gelatto/death/death_1.png" type="Texture" id=23]
[ext_resource path="res://assets/gelatto/death/death_6.png" type="Texture" id=24]
[ext_resource path="res://assets/gelatto/death/death_3.png" type="Texture" id=25]
[ext_resource path="res://assets/gelatto/run/walk_1.png" type="Texture" id=26]
[ext_resource path="res://assets/gelatto/run/walk_5.png" type="Texture" id=27]
[ext_resource path="res://assets/gelatto/death/death_2.png" type="Texture" id=28]
[ext_resource path="res://assets/gelatto/run/walk_2.png" type="Texture" id=29]
[ext_resource path="res://assets/gelatto/run/walk_4.png" type="Texture" id=30]
[ext_resource path="res://assets/gelatto/death/death_5.png" type="Texture" id=31]
[ext_resource path="res://assets/gelatto/death/death_8.png" type="Texture" id=32]
[ext_resource path="res://assets/gelatto/death/death_10.png" type="Texture" id=33]
[ext_resource path="res://assets/gelatto/death/death_11.png" type="Texture" id=34]
[ext_resource path="res://assets/gelatto/death/death_4.png" type="Texture" id=35]
[ext_resource path="res://assets/gelatto/death/death_13.png" type="Texture" id=36]
[ext_resource path="res://assets/gelatto/death/death_15.png" type="Texture" id=37]
[ext_resource path="res://assets/gelatto/death/death_16.png" type="Texture" id=38]
[ext_resource path="res://assets/gelatto/damage/take_hit_1.png" type="Texture" id=39]
[ext_resource path="res://assets/gelatto/damage/take_hit_2.png" type="Texture" id=40]
[ext_resource path="res://assets/gelatto/run/walk_7.png" type="Texture" id=41]
[ext_resource path="res://assets/gelatto/death/death_12.png" type="Texture" id=42]
[ext_resource path="res://assets/gelatto/run/walk_6.png" type="Texture" id=43]
[ext_resource path="res://assets/gelatto/damage/take_hit_3.png" type="Texture" id=44]
[ext_resource path="res://assets/gelatto/damage/take_hit_4.png" type="Texture" id=45]
[ext_resource path="res://assets/gelatto/death/death_7.png" type="Texture" id=46]
[ext_resource path="res://assets/gelatto/damage/take_hit_6.png" type="Texture" id=47]
[ext_resource path="res://assets/gelatto/death/death_14.png" type="Texture" id=48]
[ext_resource path="res://assets/gelatto/damage/take_hit_7.png" type="Texture" id=49]
[ext_resource path="res://assets/gelatto/run/walk_9.png" type="Texture" id=50]
[ext_resource path="res://assets/gelatto/run/walk_10.png" type="Texture" id=51]
[ext_resource path="res://assets/gelatto/run/walk_3.png" type="Texture" id=52]
[ext_resource path="res://assets/gelatto/death/death_9.png" type="Texture" id=53]
[ext_resource path="res://assets/gelatto/damage/take_hit_5.png" type="Texture" id=54]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 39 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 40 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 44 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 45 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 54 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 47 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 49 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 35 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 35 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 26 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 29 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 52 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 30 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 43 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 41 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 50 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 51 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 35 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 46 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 32 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 53 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 33 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 34 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 42 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 36 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 48 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 37 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 38 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 26 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 29 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 52 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 30 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 43 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 41 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 50 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 51 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "damage",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "attack1",
"speed": 12.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "melee",
"speed": 6.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 45.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3, 46.25 )

[node name="gelatto" type="AnimatedSprite"]
position = Vector2( 330, 278 )
frames = SubResource( 7 )
animation = "melee"
frame = 8
playing = true
script = ExtResource( 1 )

[node name="hurtBox" type="Area2D" parent="."]
position = Vector2( -2, -11 )
collision_layer = 512
collision_mask = 512
__meta__ = {
"_edit_group_": true
}

[node name="collisionHurt" type="CollisionShape2D" parent="hurtBox"]
position = Vector2( 0, 12.5 )
shape = SubResource( 8 )

[node name="hitBox" type="Area2D" parent="."]
position = Vector2( 6, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="collisionHit" type="CollisionShape2D" parent="hitBox"]
position = Vector2( -28, 1 )
shape = SubResource( 9 )

[connection signal="animation_finished" from="." to="." method="_on_gelatto_animation_finished"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
